--- a/PlanesTour/PlanesTour.csproj
+++ b/PlanesTour/PlanesTour.csproj
@@ -179,6 +179,10 @@
       <Project>{7a9f6e73-1dfe-4e97-90e0-4f8cc9bf4c2f}</Project>
       <Name>PlanesTour.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PlanesTour.Data\PlanesTour.Data.csproj">
+      <Project>{65404040-f360-4370-ac61-69f1c8ad1aba}</Project>
+      <Name>PlanesTour.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
