--- a/PlanesTour/Web.config
+++ b/PlanesTour/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="LocalConnection"  connectionString="Data Source=.;Initial Catalog=PlanesTour; User id=sa;password=12345678" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
