Change accessability levels on Domain Clases

--- a/PlanesTour.Data/PlanesTour.Data.csproj
+++ b/PlanesTour.Data/PlanesTour.Data.csproj
@@ -57,6 +57,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlanesTour.Core\PlanesTour.Core.csproj">
+      <Project>{7a9f6e73-1dfe-4e97-90e0-4f8cc9bf4c2f}</Project>
+      <Name>PlanesTour.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
