--- a/PlanesTour.Repository/PlanesTour.Repository.csproj
+++ b/PlanesTour.Repository/PlanesTour.Repository.csproj
@@ -51,13 +51,19 @@
   <ItemGroup>
     <Compile Include="BaseRepository.cs" />
     <Compile Include="Contracts\IBaseRepository.cs" />
+    <Compile Include="Contracts\IFeedbackRepository.cs" />
     <Compile Include="Contracts\IHotelRepository.cs" />
+    <Compile Include="Contracts\ILocationRepository.cs" />
     <Compile Include="Contracts\IOffertRepository.cs" />
     <Compile Include="Contracts\IReservationRepository.cs" />
+    <Compile Include="Contracts\IUserRepository.cs" />
+    <Compile Include="FeedbackRepository.cs" />
     <Compile Include="HotelRepository.cs" />
+    <Compile Include="LocationRepository.cs" />
     <Compile Include="OffertRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReservationRepository.cs" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PlanesTour.Core\PlanesTour.Core.csproj">
