--- a/PlanesTour.AppServices/PlanesTour.AppServices.csproj
+++ b/PlanesTour.AppServices/PlanesTour.AppServices.csproj
@@ -40,8 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\ILocationService.cs" />
+    <Compile Include="Contracts\IOffertService.cs" />
     <Compile Include="HotelService.cs" />
     <Compile Include="Contracts\IHotelService.cs" />
+    <Compile Include="LocationService.cs" />
+    <Compile Include="OffertService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
