--- a/PlanesTour/PlanesTour.csproj
+++ b/PlanesTour/PlanesTour.csproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <Content Include="Assets\Images\placeholdit1280x400.png" />
     <Content Include="Assets\Images\placeholdit1280x600.png" />
+    <Content Include="Assets\Images\placeholdit400x300.png" />
     <Content Include="Assets\Photos\bocachica.jpg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
