--- a/PlanesTour/PlanesTour.csproj
+++ b/PlanesTour/PlanesTour.csproj
@@ -157,7 +157,11 @@
     <Content Include="Assets\Images\placeholdit1280x400.png" />
     <Content Include="Assets\Images\placeholdit1280x600.png" />
     <Content Include="Assets\Images\placeholdit400x300.png" />
+    <Content Include="Assets\Photos\bayahibe.jpg" />
     <Content Include="Assets\Photos\bocachica.jpg" />
+    <Content Include="Assets\Photos\juandolio.jpg" />
+    <Content Include="Assets\Photos\puertoplata.jpg" />
+    <Content Include="Assets\Photos\puntacana.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
