--- a/PlanesTour/Web.config
+++ b/PlanesTour/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LocalConnection" connectionString="Data Source=.;Initial Catalog=PlanesTour; User id=sa;password=12345678" providerName="System.Data.SqlClient" />
+    <add name="LocalConnection" connectionString="Data Source=.;Initial Catalog=PlanesTour; MultipleActiveResultSets=True; User id=sa;password=12345678" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
