--- a/PlanesTour/Web.config
+++ b/PlanesTour/Web.config
@@ -12,7 +12,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="PhotosRootPath" value="/Assets/Photos/"/>
+    <add key="LocationPhotoPath" value="/Assets/Photos/Locations/"/>
+    <add key="HotelPhotoPath" value="/Assets/Photos/Hotels/"/>
     <add key="ImagesRootPath" value="/Assets/Images/"/>
   </appSettings>
   <system.web>
