--- a/PlanesTour.Data/PlanesTour.Data.csproj
+++ b/PlanesTour.Data/PlanesTour.Data.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Migrations\201602282142097_InitialMigration.Designer.cs">
       <DependentUpon>201602282142097_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603112312066_renameOffertTable.cs" />
+    <Compile Include="Migrations\201603112312066_renameOffertTable.Designer.cs">
+      <DependentUpon>201603112312066_renameOffertTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlanesTourDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,6 +75,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201602282142097_InitialMigration.resx">
       <DependentUpon>201602282142097_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603112312066_renameOffertTable.resx">
+      <DependentUpon>201603112312066_renameOffertTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
