--- a/PlanesTour.Repository/PlanesTour.Repository.csproj
+++ b/PlanesTour.Repository/PlanesTour.Repository.csproj
@@ -60,7 +60,7 @@
     <Compile Include="FeedbackRepository.cs" />
     <Compile Include="HotelRepository.cs" />
     <Compile Include="LocationRepository.cs" />
-    <Compile Include="OffertRepository.cs" />
+    <Compile Include="OfferRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReservationRepository.cs" />
     <Compile Include="UserRepository.cs" />
