--- a/PlanesTour/PlanesTour.csproj
+++ b/PlanesTour/PlanesTour.csproj
@@ -160,18 +160,22 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HotelController.cs" />
     <Compile Include="Controllers\LocationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\UrlHelperExtetions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Home\Index.cs" />
+    <Compile Include="ViewModels\Hotel\Detail.cs" />
     <Compile Include="ViewModels\Location\Index.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Images\placeholdit1280x400.png" />
     <Content Include="Assets\Images\placeholdit1280x600.png" />
     <Content Include="Assets\Images\placeholdit400x300.png" />
+    <Content Include="Assets\Photos\ceo.jpg" />
     <Content Include="Assets\Photos\Hotels\be-live-canoa\01.jpg" />
     <Content Include="Assets\Photos\Hotels\be-live-marien\01.jpg" />
     <Content Include="Assets\Photos\Hotels\bluebays-villas-doradas\01.jpg" />
@@ -282,6 +286,9 @@
     <Content Include="Views\Location\Detail.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Scripts\jquery-2.2.1.min.map" />
+    <Content Include="Views\Hotel\Detail.cshtml" />
+    <Content Include="Views\Shared\_RelatedHotelsPartial.cshtml" />
+    <Content Include="Views\Shared\_LocationListDropdownPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
