--- a/PlanesTour.AppServices/PlanesTour.AppServices.csproj
+++ b/PlanesTour.AppServices/PlanesTour.AppServices.csproj
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,11 +45,14 @@
     <Compile Include="AdminService.cs" />
     <Compile Include="Contracts\IAdminService.cs" />
     <Compile Include="Contracts\ILocationService.cs" />
+    <Compile Include="Contracts\IPhotoManager.cs" />
     <Compile Include="Contracts\IOffertService.cs" />
     <Compile Include="HotelService.cs" />
     <Compile Include="Contracts\IHotelService.cs" />
     <Compile Include="LocationService.cs" />
     <Compile Include="OfferService.cs" />
+    <Compile Include="PhotoManager.cs" />
+    <Compile Include="PhotoType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
