--- a/PlanesTour.Repository/PlanesTour.Repository.csproj
+++ b/PlanesTour.Repository/PlanesTour.Repository.csproj
@@ -55,15 +55,19 @@
   <ItemGroup>
     <Compile Include="BaseRepository.cs" />
     <Compile Include="Contracts\IBaseRepository.cs" />
+    <Compile Include="Contracts\IHotelPhotoRepository.cs" />
     <Compile Include="Contracts\IHotelRepository.cs" />
     <Compile Include="Contracts\ILocationRepository.cs" />
     <Compile Include="Contracts\IOfferRepository.cs" />
     <Compile Include="Contracts\IRepositoryFactory.cs" />
     <Compile Include="Contracts\IUnitOfWork.cs" />
     <Compile Include="EntityFrameworkUnitOfWork.cs" />
+    <Compile Include="Contracts\IPhotoRepository.cs" />
+    <Compile Include="HotelPhotoRepository.cs" />
     <Compile Include="HotelRepository.cs" />
     <Compile Include="LocationRepository.cs" />
     <Compile Include="OfferRepository.cs" />
+    <Compile Include="PhotoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryFactory.cs" />
   </ItemGroup>
