--- a/PlanesTour/Web.config
+++ b/PlanesTour/Web.config
@@ -25,7 +25,7 @@
     <add key="ImagesRootPath" value="/Assets/Images/" />
   <add key="elmah.mvc.disableHandler" value="false" /><add key="elmah.mvc.disableHandleErrorFilter" value="false" /><add key="elmah.mvc.requiresAuthentication" value="false" /><add key="elmah.mvc.IgnoreDefaultRoute" value="false" /><add key="elmah.mvc.allowedRoles" value="*" /><add key="elmah.mvc.allowedUsers" value="*" /><add key="elmah.mvc.route" value="elmah" /><add key="elmah.mvc.UserAuthCaseSensitive" value="true" /></appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error/Http500">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Error/Http500">
       <error statusCode="400" redirect="~/Error/Http400" />
       <error statusCode="401" redirect="~/Error/Http500" />
       <error statusCode="403" redirect="~/Error/Http403" />
